# hfd

./: .gitignore  .hfdconfig  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_and_upload.sh  hfd.sh  pyproject.toml  test.py  test.sh
.github/workflows/: publish.yml  python-package-conda.yml  rust.yml
conda/: meta.yaml
hfd-py/: .pypirc  Cargo.toml  pyproject.toml
hfd-py/python/hfd/: __init__.py  _cli.py
hfd-py/src/: lib.rs
python/: __main__.py
python/hfd/: __init__.py
scripts/: build.sh  push_version.sh
src/: auth.rs  cli.rs  config.rs  downloader.rs  lib.rs  main.rs  types.rs  utils.rs
src/download/: chunk.rs  download_impl.rs  download_task.rs  downloader.rs  file.rs  file_filter.rs  file_list.rs  mod.rs  progress.rs  repo.rs
src/hfd/: __main__.py
