[package]
name = "hfd"
version = "0.0.6"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Fast HuggingFace model downloader"

[lib]
name = "hfd"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
shellexpand = "3.1"
regex = "1.10"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
ctrlc = "3.4.0"
lazy_static = "1.4.0"
