[package]
name = "hfd"
version = "0.0.8"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Fast HuggingFace model downloader"

[lib]
name = "hfd"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
indicatif = "0.17.7"
shellexpand = "3.1"
regex = "1.9.5"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
ctrlc = "3.4.1"
lazy_static = "1.4.0"
dirs = "5.0"
toml = "0.8"
rand = "0.8.5"
flate2 = "1.0"
