[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hfd"
version = "0.0.5"
description = "A fast Hugging Face model downloader written in Rust"
authors = [
    {name = "migu", email = "migu@example.com"},
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = "https://github.com/migu/hfd"

[project.scripts]
hfd = "hfd.cli:main"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
repository = "https://test.pypi.org/legacy/" 